force-app/main/default/objects/HubSpot_Field_Mapping__mdt/HubSpot_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>HubSpot Field Mapping</label>
    <pluralLabel>HubSpot Field Mappings</pluralLabel>
</CustomObject>