force-app/main/default/objects/HubSpot_Field_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this mapping is ignored -- the field is no longer synced to HubSpot. Lets an admin disable a mapping without deleting the row or deploying code.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>