force-app/main/default/objects/HubSpot_Field_Mapping__mdt/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description
  >Shared default direction for this field, used by every portal whose own Direction_* override is blank. BLANK MEANS SF_to_HS, so leaving this empty preserves the original outbound-only behaviour. Direction only applies where the portal's Syncs_To_* checkbox is also checked.</description>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SF_to_HS</fullName>
                <label>Salesforce to HubSpot</label>
            </value>
            <value>
                <fullName>HS_to_SF</fullName>
                <label>HubSpot to Salesforce</label>
            </value>
            <value>
                <fullName>Bidirectional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>