force-app/main/default/objects/HubSpot_Field_Mapping__mdt/fields/Direction_Spain__c.field-meta.xml
<CustomField>
    <fullName>Direction_Spain__c</fullName>
    <description
  >Direction override for the Berger-Levrault Spain portal. Blank falls through to the shared Direction__c -- it must not shadow it, the same rule the association type ids and value-map overrides follow.</description>
    <label>Direction Spain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SF_to_HS</fullName>
                <label>Salesforce to HubSpot</label>
            </value>
            <value>
                <fullName>HS_to_SF</fullName>
                <label>HubSpot to Salesforce</label>
            </value>
            <value>
                <fullName>Bidirectional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>