force-app/main/default/objects/HubSpot_Field_Mapping__mdt/fields/HubSpot_Property__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Property__c</fullName>
    <description>HubSpot contact property internal name to write the value to (e.g. email, firstname).</description>
    <label>HubSpot Property</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>