force-app/main/default/objects/HubSpot_Field_Mapping__mdt/fields/Inbound_Clears__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Clears__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Whether an empty HubSpot value is allowed to CLEAR this Salesforce field on the inbound leg. Only consulted for HS_to_SF and Bidirectional fields, and only for a property that came back PRESENT-but-empty -- a property absent from the response is always treated as unknown and skipped. A clear on a non-nillable field is refused regardless of this flag.</description>
    <label>Inbound Clears</label>
    <type>Checkbox</type>
</CustomField>