force-app/main/default/objects/HubSpot_Field_Mapping__mdt/fields/Portal_Sync_Object__c.field-meta.xml
<CustomField>
    <fullName>Portal_Sync_Object__c</fullName>
    <label>Portal Sync Object</label>
    <referenceTo>Portal_Sync_Object__mdt</referenceTo>
    <relationshipLabel>HubSpot Field Mappings</relationshipLabel>
    <relationshipName>HubSpot_Field_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>