force-app/main/default/objects/HubSpot_Field_Mapping__mdt/fields/SF_Field__c.field-meta.xml
<CustomField>
    <fullName>SF_Field__c</fullName>
    <description>Contact field API name to read the value from (e.g. Email, FirstName).</description>
    <label>Salesforce Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>