force-app/main/default/objects/HubSpot_Field_Mapping__mdt/fields/Syncs_To_Spain__c.field-meta.xml
<CustomField>
    <fullName>Syncs_To_Spain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Syncs To Spain</label>
    <type>Checkbox</type>
</CustomField>